fix for lang alignment #2

--- a/themes/grav/scss/template/_pages.scss
+++ b/themes/grav/scss/template/_pages.scss
@@ -233,6 +233,8 @@
 
     #admin-lang-toggle {
         z-index:10;
+        float: left;
+        margin-right: 5px;
 
         .dropdown-menu {
             button {
